--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -9,6 +9,8 @@ pipeline {
             }
             steps {
                 sh "python --version"
+                sh "pip install -r requirements.txt"
+                sh "python main.py"
             }
         }
     }
