--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
             }
             steps {
                 sh "python --version"
-                sh "pip install -r requirements.txt"
+                sh "pip install -r requirements.txt --user"
                 sh "python main.py"
             }
         }
