--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -8,10 +8,15 @@ pipeline {
                 }
             }
             steps {
-                sh "python --version"
-                sh "pip3 install --user -r requirements.txt"
-                sh "python main.py"
+                sh '''
+                    python --version
+                    python -m venv .venv
+                    . .venv/bin/activate
+                    pip install -r requirements.txt
+                    pytest -v
+                '''
             }
         }
+
     }
 }
