--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
                     python -m venv .venv
                     . .venv/bin/activate
                     pip install -r requirements.txt
-                    pytest -v
+                    python main.py
                 '''
             }
         }
