--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
     agent none
 
     environment {
-        registry = "MyRegistry"
+        registry = "my_registry"
         registryCredential = "cc628db2-1ca8-4913-b987-264adb97801d"
         dockerImage = "Test"
     }
